[project]
name = "tz-kit"
version = "1.0.0"
description = "A modern timezone toolkit for Python (microservices) fastapi, starlette"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Arun Prasath", email = "arunprasathpuni289@gmail.com" }
]

license = { text = "MIT" }

keywords = [
    "timezone",
    "utc",
    "zoneinfo",
    "fastapi",
    "starlette",
    "microservices",
    "datetime"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic>=2.5",
    "starlette>=0.36",
    "tzdata>=2024.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23"
]

[project.urls]
Homepage = "https://github.com/StartUp-Software-Pvt-Ltd/tz-kit"
Repository = "https://github.com/StartUp-Software-Pvt-Ltd/tz-kit"
Issues = "https://github.com/StartUp-Software-Pvt-Ltd/tz-kit/issues"
Documentation = "https://github.com/StartUp-Software-Pvt-Ltd/tz-kit#readme"

# --------------------------------------------------
# BUILD SYSTEM (PEP 517 / 518)
# --------------------------------------------------
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# --------------------------------------------------
# BLACK CONFIG
# --------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py39"]

# --------------------------------------------------
# OPTIONAL: SETUPTOOLS CONFIG
# --------------------------------------------------
[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["tz_kit*"]

# --------------------------------------------------
# PYTEST CONFIG (OPTIONAL BUT RECOMMENDED)
# --------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "strict"

# --------------------------------------------------
# LINTING / FORMATTING (OPTIONAL)
# --------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["tz_kit"]
